Crash on texture painting with invalid material indices attribute #103198

Closed
opened 2022-12-14 00:10:01 +01:00 by Dawid · 16 comments

System Information
Operating system: Windows 11
Graphics card: RTX 3060

Blender Version
Broken: 3.4.0, a95bf1ac01, 2022-12-06

Short description of error
while in texture painting mode. when I click to paint, blender crushes.
Exact steps for others to reproduce the error

  • Open attached file
  • Switch to texture paint mode
  • Paint on selected mesh (retry if crash doesn't happen)

untitled.blend
recordedVideo.mp4

**System Information** Operating system: Windows 11 Graphics card: RTX 3060 **Blender Version** Broken: 3.4.0, a95bf1ac01be, 2022-12-06 **Short description of error** while in texture painting mode. when I click to paint, blender crushes. **Exact steps for others to reproduce the error** - Open attached file - Switch to texture paint mode - Paint on selected mesh (retry if crash doesn't happen) [untitled.blend](https://archive.blender.org/developer/F14056293/untitled.blend) [recordedVideo.mp4](https://archive.blender.org/developer/F14056303/recordedVideo.mp4)
Author

Added subscriber: @Sauder

Added subscriber: @Sauder

#104224 was marked as duplicate of this issue

#104224 was marked as duplicate of this issue

#104228 was marked as duplicate of this issue

#104228 was marked as duplicate of this issue

#103745 was marked as duplicate of this issue

#103745 was marked as duplicate of this issue
Pratik Borhade changed title from texture painting bug to Crash on texture painting 2022-12-14 10:27:56 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Hi, thanks for the report. I can repro the crash in uploaded file. Though I'm not able to recreate such situation from scratch.
Do you remember how exactly you created the model. Did you import it from other software?

Hi, thanks for the report. I can repro the crash in uploaded file. Though I'm not able to recreate such situation from scratch. Do you remember how exactly you created the model. Did you import it from other software?
Author

I added 2 cubes and merged it with boolean modifier, after it I added cylinder and merged it with boolean. I also added bevel using HardOps, and weighted normal modifier. It was created in blender, not in other software.

It also happend in my other projects, it seems to happening after boolean modifier. Every time I merge for example: cube with cylinder or sphere and try to texture paint it happens.

I added 2 cubes and merged it with boolean modifier, after it I added cylinder and merged it with boolean. I also added bevel using HardOps, and weighted normal modifier. It was created in blender, not in other software. It also happend in my other projects, it seems to happening after boolean modifier. Every time I merge for example: cube with cylinder or sphere and try to texture paint it happens.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscribers: @HooglyBoogly, @JosephEagar, @lichtwerk

Added subscribers: @HooglyBoogly, @JosephEagar, @lichtwerk
Member

There are faces with non-existing material indices

{F14061981 size=full}

If the attribute is removed, there is no crash.
You could also call C.active_object.data.validate_material_indices() https://docs.blender.org/api/3.5/bpy.types.Mesh.html#bpy.types.Mesh.validate_material_indices

@HooglyBoogly @JosephEagar : I recall similar cases, wasnt there a related fix already?

There are faces with non-existing material indices {[F14061981](https://archive.blender.org/developer/F14061981/image.png) size=full} If the attribute is removed, there is no crash. You could also call `C.active_object.data.validate_material_indices()` https://docs.blender.org/api/3.5/bpy.types.Mesh.html#bpy.types.Mesh.validate_material_indices @HooglyBoogly @JosephEagar : I recall similar cases, wasnt there a related fix already?
Philipp Oeser changed title from Crash on texture painting to Crash on texture painting with invalid material indices attribute 2022-12-16 10:02:22 +01:00

This issue was referenced by 0beb358a69

This issue was referenced by 0beb358a69d0c9c5436995c2945eadbae95e8965
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-12-18 16:11:12 +01:00
Member

Added subscriber: @Klimentiy

Added subscriber: @Klimentiy
Member

Added subscriber: @Cate-Ayrrah-Ren-Acoba-Lara

Added subscriber: @Cate-Ayrrah-Ren-Acoba-Lara
Member

Added subscriber: @TownEater

Added subscriber: @TownEater
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103198
No description provided.